# clueless

./: .gitignore  README.md  requirements.md
.github/workflows/: server_ci.yml  server_deploy.yml
client/clueless_web_ui/: README.md  package-lock.json  package.json  tailwind.config.ts
client/clueless_web_ui/app/: globals.css  layout.tsx  page.tsx
client/clueless_web_ui/app/join_game/: page.tsx
client/clueless_web_ui/app/new_game/: page.tsx
client/clueless_web_ui/app/play/: page.tsx
client/clueless_web_ui/components/: accuse-btn.tsx  app-sidebar.tsx  board.tsx  end-game.tsx  move-btn.tsx  nav-main.tsx  suggest-btn.tsx
client/clueless_web_ui/components/ui/: sidebar.tsx
client/clueless_web_ui/lib/: types.ts
server/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
server/tests/: test_accusation_endpoint.py  test_deal_remaning_cards.py  test_get_game_state.py  test_initialize_game_endpoint.py  test_movement.py  test_movement_endpoint.py  test_next_player.py  test_suggestion_endpoint.py  test_validate_move_endpoint.py  util_functions.py
server/tests/data/: move_actions.py
server/util/: actions.py  enums.py  functions.py  game_map.py  game_state.py  movement.py
