[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "fastapi[standard]>=0.112.2",
    "pydantic>=2.8.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]


